Issue #8973:  Add __all__ to struct module, so that help(struct) correctly displays information for the struct.Struct class.